fixed .env and updated readme

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DATABASE_URL=postgresql://Turar:123@localhost:5432/capstone
-TEST_DATABASE_URL=postgresql://Turar:123@localhost:5432/capstone_test
+AUTH0_DOMAIN=dev-syvodjctzhyy63ei.us.auth0.com
+API_AUDIENCE=coffeeshop
+ALGORITHMS=['RS256']
+JWT=gh
